@@ -2091,6 +2091,7 @@ AC_CHECK_FUNCS(fchmod)
 AC_CHECK_FUNCS(fchown)
 AC_CHECK_FUNCS(fcntl)
 AC_CHECK_FUNCS(fdatasync)
+AC_CHECK_FUNCS(fgetattrlist)
 AC_CHECK_FUNCS(fmod)
 AC_CHECK_FUNCS(fsync)
 AC_CHECK_FUNCS(ftruncate)
